[gd_scene load_steps=2 format=3 uid="uid://bq3k8k2x23k8r"]

[ext_resource type="Script" path="res://scripts/tutorial_overlay.gd" id="1_1x23k"]

[node name="TutorialOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1x23k")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 1.0
offset_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
theme_override_colors = {
	"font_color": Color(1, 1, 1, 1)
}

[node name="TitleLabel" type="Label" parent="Container"]
layout_mode = 1
text = "Tutorial Title"
horizontal_alignment = 1
autowrap_mode = 1
theme_override_fonts/font = ExtResource("1_1x23k")
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_styles/normal = ExtResource("1_1x23k")

[node name="DescriptionLabel" type="Label" parent="Container"]
layout_mode = 1
text = "Tutorial description goes here."
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="ImageContainer" type="Control" parent="Container"]
layout_mode = 1
custom_minimum_size = Vector2(200, 200)

[node name="TutorialImage" type="TextureRect" parent="Container/ImageContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
expand_mode = 1
stretch_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="Container"]
layout_mode = 1
min_value = 0.0
max_value = 1.0
value = 0.0
custom_minimum_size = Vector2(200, 20)
theme_override_styles/normal_bg = ExtResource("1_1x23k")
theme_override_styles/normal = ExtResource("1_1x23k")

[node name="ButtonContainer" type="HBoxContainer" parent="Container"]
layout_mode = 1

[node name="SkipButton" type="Button" parent="Container/ButtonContainer"]
layout_mode = 1
text = "Skip Tutorial"
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)

[node name="NextButton" type="Button" parent="Container/ButtonContainer"]
layout_mode = 1
text = "Next"
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="SkipConfirmationPanel" type="Control" parent="Container"]
layout_mode = 1
visible = false
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="ConfirmationLabel" type="Label" parent="Container/SkipConfirmationPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
text = "Are you sure you want to skip the tutorial?\nYou can always restart from the main menu."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
theme_override_colors/font_color = Color(1, 1, 0.5, 1)

[node name="ButtonContainer" type="HBoxContainer" parent="Container/SkipConfirmationPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 100.0

[node name="ConfirmButton" type="Button" parent="Container/SkipConfirmationPanel/ButtonContainer"]
layout_mode = 1
text = "Yes, Skip"
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)

[node name="CancelButton" type="Button" parent="Container/SkipConfirmationPanel/ButtonContainer"]
layout_mode = 1
text = "No, Continue"
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)